--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 # Puerto donde escucha el servidor una vez se inicie
 server.port=8088
 # Datos de conexion con la base de datos MySQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/myshoponline
+spring.datasource.url=jdbc:postgresql://192.168.1.22:5432/javieregido
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=org.postgresql.Driver
